# tiny-nrf52

./: Cargo.toml  size.sh  size.txt
src/: main.rs
