[package]
name = "tiny-nrf52"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-rt  = "0.6.10"
cortex-m     = "0.6.1"
nb           = "0.1.2"
heapless     = "0.5.1"
embedded-hal = "0.2"
panic-reset  = "0.1"

[dependencies.dwm1001]
version = "0.3.0"
features = ["dev", "rt"]

[profile.dev]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 0

[profile.release]
lto             = true
panic           = "abort"
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 's'
